Bug fixes + mobile setup
Not great on Ipads.. oh well

Added media queries, fixed some javascript. Should be done now.

--- a/index.css
+++ b/index.css
@@ -69,7 +69,6 @@
 }
 
 .playWrap {
-	transform: scale(1.5);
 	height: 30%;
 	width: 20%;
 	display: flex;
@@ -93,7 +92,7 @@
 }
 
 .playIcon:hover .hoverPulse{
-	margin-bottom: -0.3rem;
+	margin-top: 0.1rem;
 	position: absolute;
 	height: 10.5rem;
 	width: 10.5rem;
@@ -208,6 +207,10 @@
 	background-color: #9f1536;
 }
 
+.rockIcon {
+		margin-top: 4rem;
+}
+
 .rulesOpacity {
 	display: none !important;
 }
@@ -267,13 +270,23 @@
 	align-items: center;
 }
 
-.yourPick {
+.youPicked {
+	position: absolute;
+	width: 150%;
+	display: flex;
+	justify-content: center;
+	transform: translateY(-8.5rem);
+	font-size: 1.25rem;
+	opacity: 0;
+}
+
+.theHouse {
 	position: absolute;
 	width: 200%;
-	margin-top: -2rem;
-	margin-left: 2rem;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	transform: translateY(-8.5rem);
+	font-size: 1.25rem;
 	opacity: 0;
 }
 
@@ -284,8 +297,8 @@
 
 .chosen {
 	position: absolute;
-	left: -50%;
 	bottom: 30%;
+	left: 30%;
 	margin: 0;
 	transform: scale(1.4);
 	pointer-events: none;
@@ -300,7 +313,7 @@
 .computer {
 	opacity: 1 !important;
 	position: absolute;
-	right: -50%;
+	right: 30%;
 	bottom: 30%;
 	margin: 0;
 	transform: scale(1.4);
@@ -312,7 +325,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	bottom: 15%;
+	bottom: 30%;
 	position: absolute;
 	opacity: 0;
 }
