--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@
 }
 
 .pageWrap {
+	position: relative;
 	margin: auto;
 	max-width: 1366px;
 	width: 100%;
@@ -229,7 +230,8 @@
 
 .rulesWrap {
 	position: absolute;
-	height: 100%;
+	height: 100vh;
+	max-height: 100%;
 	width: 100%;
 	z-index: 999;
 	display: flex;
