--- a/index.css
+++ b/index.css
@@ -2,10 +2,10 @@
 	margin: 0;
 	box-sizing: border-box;
 	color: white;
-	font-family: 'Barlow Semi Condensed', sans-serif;
+	font-family: "Barlow Semi Condensed", sans-serif;
 	font-size: 15px;
 	letter-spacing: 2px;
-	text-decoration: none; 
+	text-decoration: none;
 }
 
 .container {
@@ -13,7 +13,7 @@
 	height: 100vh;
 	max-width: 100%;
 	min-width: 100%;
-	background: radial-gradient(at top,hsl(214, 47%, 23%),hsl(237, 49%, 15%));
+	background: radial-gradient(at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
 }
 
 .pageWrap {
@@ -76,7 +76,7 @@
 	justify-content: space-between;
 	align-items: center;
 	flex-direction: column;
-	background-image: url('images/bg-triangle.svg');
+	background-image: url("images/bg-triangle.svg");
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
@@ -92,12 +92,12 @@
 	cursor: pointer;
 }
 
-.playIcon:hover .hoverPulse{
+.playIcon:hover .hoverPulse {
 	margin-top: 0.1rem;
 	position: absolute;
 	height: 10.5rem;
 	width: 10.5rem;
-	border-radius: 50%;	
+	border-radius: 50%;
 	z-index: 0;
 	background-color: white;
 	opacity: 0.05;
@@ -157,7 +157,7 @@
 	position: absolute;
 	height: 10.5rem;
 	width: 10.5rem;
-	border-radius: 50%;	
+	border-radius: 50%;
 	z-index: 2;
 }
 
@@ -166,12 +166,12 @@
 	position: absolute;
 	height: 10.5rem;
 	width: 10.5rem;
-	border-radius: 50%;	
+	border-radius: 50%;
 	z-index: 1;
 }
 
 .paperColor {
-	background: linear-gradient(hsl(230, 89%, 62%),hsl(230, 89%, 65%));
+	background: linear-gradient(hsl(230, 89%, 62%), hsl(230, 89%, 65%));
 }
 
 .paperShadow {
@@ -209,7 +209,7 @@
 }
 
 .rockIcon {
-		margin-top: 4rem;
+	margin-top: 4rem;
 }
 
 .rulesOpacity {
@@ -222,7 +222,7 @@
 	right: 0;
 	position: absolute;
 	margin: 2.5rem;
-	padding: .75rem 2rem;
+	padding: 0.75rem 2rem;
 	border-radius: 7px;
 	border: solid 1px white;
 	background: transparent;
@@ -237,7 +237,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: rgba(0, 0, 0, 0.7);
+	/*background-color: rgba(0, 0, 0, 0.7);*/
 }
 
 .textClose {
